# fish-assistant

./: .gitignore  CONFIGURATION.md  LICENSE  POCKETBEAGLE_COMMUNICATION.md  QUICKSTART.md  README.md  pyproject.toml
assistant/: app.py  cli.py  client_server.py  server.py
assistant/core/: bus.py  config.py  contracts.py  router.py
assistant/core/audio/: billy_bass.py  client_push.py  devices.py  playback.py  recorder.py  vad.py
assistant/core/nlu/: nlu.py  rules.py  types.py
assistant/core/stt/: README.md  remote_stt_adapter.py  stt.py  whisper_adapter.py
assistant/core/tts/: README.md  pyttsx3_adapter.py  remote_tts_adapter.py  tts.py
assistant/core/ux/: conversation_loop.py
assistant/skills/: chat.py  echo.py
scripts/: README.md  find-ips.sh  on-boot.sh  quick-test.sh  setup-env.sh
tests/: test_bus.py  test_client_endpoint.py  test_client_push.py  test_component_modes.py  test_config_deployment_modes.py  test_nlu_rules.py  test_pipeline_smoke.py  test_pyttsx3_adapter.py  test_remote_adapters.py  test_server_endpoints.py  test_stt_integration.py
tests/beagle/: test_fish_controls.py
